# picosystem_template

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  picosystem-template.jdebug
.devcontainer/: Dockerfile  devcontainer.json
apps/blinky/: CMakeLists.txt  main.cpp
apps/template/: CMakeLists.txt  main.cpp
cmake/: project-functions.cmake
src/: main.cpp
src/SEGGER_RTT_V752a/: CMakeLists.txt
src/logger/: CMakeLists.txt  Log.cpp
src/logger/include/logger/: Log.hpp
